--- a/web/home.html
+++ b/web/home.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Math Solver</title>
 </head>
 <body>
-
+    <div class="header">Enter an expression</div>
+    <canvas class="drawboard"></canvas>
+    <div class="footer">
+        <button id="submit-button">Submit</button>
+    </div>
 </body>
 </html>
