Implement basic drawing functionality

--- a/web/home.html
+++ b/web/home.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="home.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Math Solver</title>
 </head>
 <body>
     <div class="header">Enter an expression</div>
-    <canvas class="drawboard"></canvas>
+    <div class="content">
+        <canvas></canvas>
+    </div>
     <div class="footer">
         <button id="submit-button">Submit</button>
     </div>
