--- a/web/home.html
+++ b/web/home.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">Enter an expression</div>
     <div class="content">
-        <canvas></canvas>
+        <canvas width="400" height="400"></canvas>
     </div>
     <div class="footer">
         <button id="submit-button">Submit</button>
