--- a/web/title.html
+++ b/web/title.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="title.css">
+    <link rel="stylesheet" href="css/title.css">
 </head>
 <body>
 <div id="allElements">
