Implement smoother transitions when selecting sidebar options.

--- a/web/home.html
+++ b/web/home.html
@@ -13,17 +13,17 @@
     <div class="header flex-display">Put something here?</div>
     <div class="content">
         <div class="sidebar">
-            <div id="clear-button" class="icon icon-bigger">
-                <i class="material-icons">close</i> <!-- clear canvas -->
-            </div>
-            <div id="line" class="icon icon-smaller icon-selected">
-                <i class="material-icons">border_color</i> <!-- draw option -->
-            </div>
             <div id="erase" class="icon icon-unselected">
                 <i class="material-icons">auto_fix_normal</i> <!-- eraser option-->
             </div>
-            <div id="width" class="icon">
+            <div id="line" class="icon icon-smaller icon-selected">
+                <i class="material-icons">edit</i> <!-- draw option -->
+            </div>
+            <div id="width" class="icon line-weight icon-unselected">
                 <i class="material-icons">line_weight</i> <!-- line width -->
+            </div>
+            <div id="clear-button" class="icon icon-bigger">
+                <i class="material-icons">close</i> <!-- clear canvas -->
             </div>
         </div>
         <canvas width="1400" height="600"></canvas> <!-- todo dimensions are currently hard coded -->
